Correção da adição da questao 2

--- a/Tabalho_Final.ipynb
+++ b/Tabalho_Final.ipynb
@@ -73,7 +73,7 @@
     "### Exercício 2) \n",
     "Faça o esboço por meio de desenho da máquina de Turing proposta.\n",
     "\n",
-    "![resposta-2.jpg](attachment:resposta-2.jpg)\n",
+    "<img src=\"img/resposta-2.jpg\"/>\n",
     "\n",
     "### Exercício 3)\n",
     "Defina a MT como uma quíntupla M=(Q,Σ,Γ,δ,q_0):\n",
