--- a/Tabalho_Final.ipynb
+++ b/Tabalho_Final.ipynb
@@ -7,7 +7,9 @@
     "# Trabalho Final GCC-108 - Teoria da Computação #\n",
     "Prof.: Douglas H. S. Abreu\n",
     "\n",
-    "Nome: \n",
+    "Nomes:\n",
+    "    João Victor Veronezi - 201811082\n",
+    "    Vinicius Abreu Gonçalves - 201820362\n",
     "\n",
     "Turma: 10A, 14A\n",
     "\n",
@@ -15,11 +17,6 @@
     "\n",
     "_______________________________________________________________________________________________________________________________"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -59,7 +56,7 @@
     "\n",
     "Tomando como base a representação de números inteiros na base binária pura, que também é a representação utilizada neste trabalho, pode-se observar na Tabela 1, que com quatro bits temos as seguintes possibilidades para números inteiros.\n",
     "\n",
-    "![Tabela1-3.png](attachment:Tabela1-3.png)\n",
+    "<img src=\"img/Tabela1.png\"/>\n",
     "\n",
     "As operações matemáticas de adição e subtração feitas na base binária seguem as mesmas regras da base decimal, contando com a diferença que temos apenas dois dígitos. Para a adição de dois números, temos quatro possibilidades de valores, sendo elas: 0 + 0, 0 + 1, 1 + 0, e 1 + 1. As três primeiras têm os mesmos resultados de uma operação em decimal, já para a operação de 1 + 1 temos como resultado zero, gerando um “vai um” para a coluna da esquerda (1).\n",
     "\n",
@@ -67,56 +64,29 @@
     "\n",
     "Turing descreve um computador digital como sendo formado por: uma unidade de armazenamento, uma unidade de execução e uma unidade de controle. A unidade de armazenamento é formada por uma fita, dividida em células, com um cabeçote apontando para a célula atual, a qual pode ser lida/escrita de acordo com a unidade de execução. Por sua vez, a unidade de execução tem como objetivo fazer a leitura do caractere representado na célula atual, analisar o que deve ser feito e alterar quando necessário. Já a unidade de controle faz as movimentações do cabeçote de acordo com o que a unidade de execução deseja, movendo o cabeçote para esquerda ou direita (2).\n",
     "\n",
-    "### Exercício 1)\n",
-    "Descreva com suas palavras uma estratégia para o desenvolvimento de uma maquina de Turing que compute a soma de 2 numeros binário.\n",
-    "\n",
-    "### Exercício 2) \n",
-    "Faça o esboço por meio de desenho da máquina de Turing proposta.\n",
-    "\n",
-    "<img src=\"img/resposta-2.jpg\"/>\n",
-    "\n",
-    "### Exercício 3)\n",
-    "Defina a MT como uma quíntupla M=(Q,Σ,Γ,δ,q_0):\n",
-    "\t\n",
-    "    Q = conjunto de estados (padrão q[0-9]+)\n",
-    "\t\n",
-    "    Σ = alfabeto de entrada\n",
-    "\t\n",
-    "    Γ = alfabeto da fita\n",
-    "\t\n",
-    "    δ = função de transição no formato (q_i,x)→(q_j,y,D); assim, estando no estado q_i, lendo x, vai para o estado q_j, escreve y e movimenta na direção de D. D será L para esquerda ou R para direita.\n",
-    "    \n",
-    "    q_0 = estado inicial\n",
-    "    \n",
-    "### Exercício 4)\n",
-    "Faça a conversão de M em R(M)\n",
-    "\n",
-    "### Exercício 5) \n",
-    "Desenvolva uma função MTU que receba R(M) acrescido de uma entrada w, onde w é um arquivo csv que contem dois números binário. A saída da função MTU deve ser a computação de M para uma entrada w.\n",
     "_______________________________________________________________________________________________________________________________"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "### Exercício 1)\n",
+    "Descreva com suas palavras uma estratégia para o desenvolvimento de uma maquina de Turing que compute a soma de 2 numeros binário."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
+    "### Exercício 2) \n",
+    "Faça o esboço por meio de desenho da máquina de Turing proposta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercício 3)\n",
     "Defina a MT como uma quíntupla M=(Q,Σ,Γ,δ,q_0):\n",
     "\t\n",
@@ -128,14 +98,23 @@
     "\t\n",
     "    δ = função de transição no formato (q_i,x)→(q_j,y,D); assim, estando no estado q_i, lendo x, vai para o estado q_j, escreve y e movimenta na direção de D. D será L para esquerda ou R para direita.\n",
     "    \n",
-    "    q_0 = estado inicial\n",
-    "    \n",
+    "    q_0 = estado inicial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercício 4)\n",
-    "Faça a conversão de M em R(M)\n",
-    "\n",
+    "Faça a conversão de M em R(M)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercício 5) \n",
-    "Desenvolva uma função MTU que receba R(M) acrescido de uma entrada w, onde w é um arquivo csv que contem dois números binário. A saída da função MTU deve ser a computação de M para uma entrada w.\n",
-    "_______________________________________________________________________________________________________________________________"
+    "Desenvolva uma função MTU que receba R(M) acrescido de uma entrada w, onde w é um arquivo csv que contem dois números binário. A saída da função MTU deve ser a computação de M para uma entrada w."
    ]
   },
   {
@@ -173,7 +152,7 @@
     "\n",
     "a) Prove que a função é primitiva recursiva\n",
     " \n",
-    "![minimizacao.png](attachment:minimizacao.png)\n",
+    "<img src=\"img/minimizacao.png\"/>\n",
     "\n",
     "sempre que _p_ e _u_ são recursivas primitivas \n",
     "\n",
@@ -199,7 +178,7 @@
     "\n",
     "b) Qual é a complexidade e o \"_big O\"_ de M'?\n",
     "\n",
-    "![MT.png](attachment:MT.png)\n",
+    "<img src=\"img/MT.png\"/>\n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
     "# Referências\n",
