Maquina de turing

--- a/Tabalho_Final.ipynb
+++ b/Tabalho_Final.ipynb
@@ -8,8 +8,7 @@
     "Prof.: Douglas H. S. Abreu\n",
     "\n",
     "Nomes:\n",
-    "    João Victor Veronezi - 201811082\n",
-    "    Vinicius Abreu Gonçalves - 201820362\n",
+    "João Victor Veronezi - 201811082<br/>Vinicius Abreu Gonçalves - 201820362\n",
     "\n",
     "Turma: 10A, 14A\n",
     "\n",
@@ -79,8 +78,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Resposta 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercício 2) \n",
-    "Faça o esboço por meio de desenho da máquina de Turing proposta."
+    "Faça o esboço por meio de desenho da máquina de Turing proposta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resposta 2\n",
+    "Utilizada máquina criada para a disciplina de Linguagens Formais Autômatas\n",
+    "\n",
+    "<img src=\"img/resposta-2.png\"/>"
    ]
   },
   {
