--- a/Tabalho_Final_Enunciado.ipynb
+++ b/Tabalho_Final_Enunciado.ipynb
@@ -133,8 +133,11 @@
     "\n",
     "sempre que _p_ e _u_ são recursivas primitivas \n",
     "\n",
-    "b) defina o valor \"passo a passo\" de _gn(4,1,0,2,1) =_\n",
+    "b) defina o valor \"passo a passo\" de _gn(4,1,0,2,1) =\n",
     "\n",
+    "## Resposta \n",
+    "\n",
+    "$2^{4} $× $3^{1} $×  $5^{0} $×  $7^{2} $× $11^{1} $ = $25872$\n",
     "_______________________________________________________________________________________________________________________________"
    ]
   },
@@ -153,6 +156,33 @@
     "\n",
     "Prove que _g(x) ∈ O(f)_ e _f(x) ∈ O(g)_\n",
     "\n",
+    "<h1>Prova:</h1>\n",
+    "<br>\n",
+    "\n",
+    " - Para complexidade:<br>\n",
+    "    - $f(x) = 3x^{2}$<br>\n",
+    " - Temos que:<br>\n",
+    "    - $O(f) = O(N^{2})$\n",
+    " - Com isso, temos: <br>\n",
+    "    -  $f(x) ∈ O(N^{2})$\n",
+    "<br>\n",
+    "<br>\n",
+    " - Para complexidade:<br>\n",
+    "    - $g(x) = 5x^{2}$<br>\n",
+    " - Temos que:<br>\n",
+    "    - $O(g) = O(N^{2})$\n",
+    " - Com isso, temos: <br>\n",
+    "    - $g(x) ∈ O(N^{2})$\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "Então temos que: g(x) ∈ O(f) e f(x) ∈ O(g)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "b) Qual é a complexidade e o \"_big O\"_ de M'?\n",
     "\n",
     "![MT.png](attachment:MT.png)\n",
@@ -169,21 +199,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sala'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# bla bla bla\n",
     "x= \"sala\"\n",
