--- a/Tabalho_Final.ipynb
+++ b/Tabalho_Final.ipynb
@@ -118,6 +118,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"img/resposta-3_1.jpeg\"/>\n",
+    "<img src=\"img/resposta-3_2.jpeg\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercício 4)\n",
     "Faça a conversão de M em R(M)"
    ]
