--- a/Tabalho_Final.ipynb
+++ b/Tabalho_Final.ipynb
@@ -188,6 +188,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercício 6)\n",
+    "\n",
     "_A)_ Explique a Tese de Chuch-Turing de forma sucinta\n",
     "\n",
     "<h3>Resposta:</h3> Toda função naturalmente computavel pode ser computada por uma máquina de Turing. Entretanto essa definição não é formal então não pode ser comprovada. Porém pode ser refutada.\n",
